gallery added along with: calculator, weather, map, list (wo firebase), & converter

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,10 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgEjVfzGFgxuXSkLeCXxB_7lHkWfGpp3w&callback=initMap"
     type="text/javascript"></script>
+
+
     <!--
+      AIzaSyCgEjVfzGFgxuXSkLeCXxB_7lHkWfGpp3w
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
